# EECE5554

./: README.md
LAB3/src/analysis/: analysis.ipynb
LAB3/src/imu_driver/imu_driver/: imu_driver.py
LAB4/: README.md
LAB4/src/: record_bag.sh
LAB4/src/analysis/: analysis.ipynb
LAB4/src/data/data_driving/: data_driving_0.db3  metadata.yaml
LAB4/src/data/data_going_in_circles/: data_going_in_circles_0.db3  metadata.yaml
LAB4/src/data/test1/: metadata.yaml  test1_0.db3
LAB4/src/imu_driver/imu_driver/: imu_driver.py
LAB4/src/lab4_bringup/: package.xml  setup.py
LAB4/src/lab4_bringup/launch/: lab4.launch.py
LAB5/images/Murals/: mosaic.asv  mosaic.m
LAB5/images/chessboards/: Calib_Results.m  Calib_Results.mat  calib_data.mat
Magnetometer_Comparison_Project/: magnetometer_analysis.ipynb  masterAnalysis.m
Magnetometer_Comparison_Project/functions/: loadSensorData.m  printResults.m  runKalmanFilter.m
